# hello-python

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
src/nanva/: app.py  pandas_learner.py  people.py  text_utils.py
tests/nanva_test/: test_people.py
