[metadata]
license_file = LICENSE
name = hello_python
author = good_man
author_email = good_man@nice.lab
description = Demo for python packaging
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/nicetoseeyou/hello-python
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

python_requires = ==3.9
install_requires=
    pandas == 1.3.1

include_package_data = True


